@@ -1,5 +1,5 @@
 # The application docker image
-FROM jdk-9-alpine-linked
+FROM jdk-11-alpine-linked
 # Add the application jar file
 ADD target/jersey-netty-app-1.0-SNAPSHOT.jar /opt/app/jersey-netty-app-1.0-SNAPSHOT.jar
 # Add the application's dependent jars obtained from maven
@@ -8,7 +8,5 @@ ADD target/dependency /opt/app/dependency
 # all dependent jars
 # Include experimental flag to obey cgroup memory limits for the heap
 CMD java \
-  -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \
   -cp /opt/app/jersey-netty-app-1.0-SNAPSHOT.jar:/opt/app/dependency/* \
   app.App
-
